@@ -8,7 +8,12 @@ SoftHSM trunk
 * Limiting the number of concurrent sessions to 256, because SQLite has a
   limit on the number of database connections.
 * Install a sample of the configuration file.
+* Manual pages are now available for softhsm, softhsm-keyconv, and
+  softhsm.conf
 * Bugfix: --enable-64bit configure option did not work correctly.
+* KNOWN BUG: A version of Botan available in some OS has a problem with
+             the entropy. This causes SoftHSM to freeze in some operations.
+             Please upgrade to the Botan 1.8.5 or greater.
 
 
 SoftHSM 1.1.1 - 2009-12-04
